# temporal.io

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: activities.py  kafka_consumer.py  main.py  workflow.py
tests/unit/: test_main.py
